package com.example.mtcg.card;

public enum CardType {
    SPELL,
    MONSTER

}

