package com.example.mtcg.market;
//service point for the market
public class Market {

}
